infra/k8s/admin-service-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: comments
          image: himeshramjee/rns-admin-service:latest
          resources:
              requests:
                memory: "512Mi"
                cpu: "1m"
              limits:
                memory: "1024Mi"
                cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-nodeport-srv
spec:
  type: NodePort
  selector:
    app: admin
  ports:
  - name: admin
    protocol: TCP
    port: 4004
    targetPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: admin-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
  - name: admin
    protocol: TCP
    port: 4004
    targetPort: 4004
