infra/k8s/event-bus-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: himeshramjee/rns-eventbus:latest
          resources:
              requests:
                memory: "512Mi"
                cpu: "1m"
              limits:
                memory: "1024Mi"
                cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
  - name: posts
    protocol: TCP
    port: 4005
    targetPort: 4005
