infra/k8s/moderator-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderator
  template:
    metadata:
      labels:
        app: moderator
    spec:
      containers:
        - name: moderator
          image: himeshramjee/rns-moderator-service:latest
          resources:
              requests:
                memory: "512Mi"
                cpu: "1m"
              limits:
                memory: "1024Mi"
                cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: moderator-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: moderator
  ports:
  - name: moderator
    protocol: TCP
    port: 4003
    targetPort: 4003
