infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: himeshramjee/rns-query-service:latest
          resources:
              requests:
                memory: "512Mi"
                cpu: "1m"
              limits:
                memory: "1024Mi"
                cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: query-nodeport-srv
spec:
  type: NodePort
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 4002
    targetPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 4002
    targetPort: 4002
