infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /cache/posts
            backend:
              serviceName: query-clusterip-srv
              servicePort: 4002
          - path: /cache/rebuild
            backend:
              serviceName: query-clusterip-srv
              servicePort: 4002
          - path: /admin/reset-data
            backend:
              serviceName: admin-clusterip-srv
              servicePort: 4004
